Added pylint to tox config

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist = py27,py34
+envlist = 
+    py27
+    py34
 
 [testenv]
 deps =
@@ -7,4 +9,5 @@ deps =
     -rrequirements.txt
 
 commands =
-    py.test tests --junitxml test_report.xml 
+    py.test tests --junitxml test_report.xml --fulltrace
+    pylint --output-format=parseable -E coap
