--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: python
 
-python:
-  - "2.7"
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py27
+    - python: 3.4
+      env: TOXENV=py34
+
+install:
+  - pip install tox
 
 script:
-- scons unittests
-- scons pylint_error
+  - tox -e $TOXENV 
+
